--- a/index.html
+++ b/index.html
@@ -136,6 +136,8 @@
                 </div>
             </div>
         </div>
+        <div>
+        </div>
     </div>
     <nav class="navigation-bar">
         <div class="navigation-bar__column">
