add google font
add google font

--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <title>My asset - BANKSALAD</title>
 </head>
 <body>
@@ -136,8 +139,8 @@
                 </div>
             </div>
         </div>
-        <div>
-        </div>
+    </div>
+    <div class="slash-screen">
     </div>
     <nav class="navigation-bar">
         <div class="navigation-bar__column">
