add moneybook page
add moneybook page

--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/style.css">
     <title>My asset - BANKSALAD</title>
 </head>
 <body>
@@ -144,26 +144,39 @@
     </div>
     <nav class="navigation-bar">
         <div class="navigation-bar__column">
-            <i class="fa-solid fa-wallet"></i>
-            <span>자산</span>
+            <a href="index.html">
+                <i class="fa-solid fa-wallet"></i>
+                <span>자산</span>
+            </a>
         </div>
         <div class="navigation-bar__column">
-            <i class="fa-solid fa-file-invoice-dollar"></i>
-            <span>가계부</span>
+            <a href="moneybook.html">
+                <i class="fa-solid fa-file-invoice-dollar"></i>
+                <span>가계부</span>
+            </a>
         </div>
         <div class="navigation-bar__column">
-            <i class="fa-solid fa-notes-medical"></i>
-            <span>건강</span>
+            <a href="health.html">
+                <i class="fa-solid fa-notes-medical"></i>
+                <span>건강</span>
+            </a>
         </div>
         <div class="navigation-bar__column">
-            <i class="fa-solid fa-puzzle-piece"></i>
-            <span>금융매칭</span>
+            <a href="finance-matching.html">
+                <i class="fa-solid fa-puzzle-piece"></i>
+                <span>금융매칭</span>
+            </a>
         </div>
         <div class="navigation-bar__column">
-            <i class="fa-solid fa-bars"></i>
-            <span>전체</span>
+            <a href="all-list.html">
+                <i class="fa-solid fa-bars"></i>
+                <span>전체</span>
+            </a>
         </div>
     </nav>
+    <div class="splash-screen">
+        <img src="img/bks.png">
+    </div>
     <script src="https://kit.fontawesome.com/4d11c5f699.js" crossorigin="anonymous"></script>
 </body>
 </html>
